log
Fri 21 Apr 2023 12:31:55 PM UTC: 
 tests:  1|8
total_score: 0/70
ce2d2a6
Fri 21 Apr 2023 12:57:50 PM UTC: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  1|8
total_score: 0/70
4c01b83
Fri 21 Apr 2023 12:58:06 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
53ec0fc
Fri 21 Apr 2023 01:05:42 PM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:75:18: error: invalid initializer
   75 |   TreeNode aux = tree->root;
      |                  ^~~~
treemap.c:76:9: error: invalid operands to binary == (have ‘TreeNode’ and ‘void *’)
   76 |   if(aux==NULL)return NULL;
      |         ^~
Compilation failed
d41a0b3
